--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,13 @@
     <groupId>groupId</groupId>
     <artifactId>GoffinetLainesse_TP1_420-A10-BB</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.29</version>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
